--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 REACT_APP_API_KEY=AIzaSyAmtSDvJEPD5s7pJxgi41NEWfHCj9V2lq0
 REACT_APP_AUTH_DOMAIN=nwitter-1a3aa.firebaseapp.com
-REACT_APP_DATABASE_URL=
+REACT_APP_DATABASE_URL=https://nwitter-1a3aa.firebaseapp.com
+REACT_PROJECT_ID=nwitter-1a3aa
+REACT_STORAGE_BUCKET=nwitter-1a3aa.appspot.com
+REACT_MESSAGEIN_ID=1073937363880
+REACT_APP_APP_ID=1:1073937363880:web:40bedee9ed5e279765e39d
