[DROP]함께폭사하자

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY=AIzaSyAmtSDvJEPD5s7pJxgi41NEWfHCj9V2lq0
-REACT_APP_AUTH_DOMAIN=nwitter-1a3aa.firebaseapp.com
-REACT_APP_DATABASE_URL=https://nwitter-1a3aa.firebaseapp.com
-REACT_PROJECT_ID=nwitter-1a3aa
-REACT_STORAGE_BUCKET=nwitter-1a3aa.appspot.com
-REACT_MESSAGEIN_ID=1073937363880
-REACT_APP_APP_ID=1:1073937363880:web:40bedee9ed5e279765e39d
+REACT_APP_API_KEY=AIzaSyD1Wog4ldfIBNHzw7rZDg0ujVCRdKrTppw
+REACT_APP_AUTH_DOMAIN=nwittrer.firebaseapp.com
+# REACT_APP_DATABASE_URL=gs://nwittrer.appspot.com
+REACT_APP_PROJECT_ID=nwitter
+REACT_STORAGE_BUCKET=nwitter.appspot.com
+REACT_MESSAGEIN_ID=780411651197
+REACT_APP_APP_ID=1:780411651197:web:6afcadea1080f01c099d14
